overflow fixato, più fix vari

--- a/css/master.css
+++ b/css/master.css
@@ -4,6 +4,7 @@
   padding: 0;
   box-sizing: border-box;
   color: white;
+  font-family: 'Roboto', sans-serif;
 }
 li {
   list-style: none;
@@ -16,10 +17,38 @@ a {
   display: flex;
   text-align: center;
 }
+h2 {
+  padding: 10px;
+}
+p {
+  padding: 0 10px;
+}
+
+/* scrollbar custom */
+/* width */
+::-webkit-scrollbar {
+  width: 10px;
+}
+
+/* Track */
+::-webkit-scrollbar-track {
+  background-color: black;
+}
+
+/* Handle */
+::-webkit-scrollbar-thumb {
+  background: gray;
+  border-radius: 3px;
+}
+
+/* Handle on hover */
+::-webkit-scrollbar-thumb:hover {
+  background: lightgray;
+}
+
 /* regole selettive */
 .conteiner {
   height: calc(100vh - 120px);
-  overflow-y: hidden;
 }
 
 /* nav upgrade */
@@ -35,6 +64,10 @@ a {
   color: white;
   display: flex;
   justify-content: space-between;
+}
+.flex-nav > a > img {
+  padding-top: 20px;
+  width: 150px;
 }
 .nav-upgrade h1 {
   display: inline-block;
@@ -68,7 +101,7 @@ nav ul li {
 nav ul li:hover .barra-verde {
   display: block;
 }
-/* playlist */
+/* playlist laterale sx*/
 .col-playlist {
   background-color: black;
   width: 200px;
@@ -77,20 +110,39 @@ nav ul li:hover .barra-verde {
   display: flex;
   flex-direction: column;
   justify-content: space-between;
+  overflow-y: auto;
 }
 .col-playlist img {
-  width: 25px;
+  width: 30px;
+  padding-right: 5px;
 }
-.icona-libreria {
+.icona-libreria a {
+  display: flex;
   line-height: 30px;
 }
 #lista-sx {
+  padding: 15px 0;
+}
+#lista-sx > li:nth-child(2) a {
+  display: flex;
+  align-items: center;
   padding: 10px 0;
 }
 #icona-plus {
   display: inline-block;
   background-color: #a3a3a3;
-  padding: 10px;
+  padding: 0 8px;
+  margin-right: 10px;
+  color: black;
+  font-size: 28px;
+}
+#lista-sx > div > li {
+  line-height: 25px;
+  font-size: 12px;
+}
+#col-playlist-giù hr {
+  margin: 8px 0;
+  color: gray;
 }
 /* parte centrale laterale dx */
 .conteiner {
@@ -102,6 +154,7 @@ nav ul li:hover .barra-verde {
   height: calc(100vh - 120px);
   width: calc(100vw - 200px);
   padding-top: 80px;
+  overflow-y: auto;
 }
 main section .box {
   padding: 14px;
